Updated CSS rules

--- a/remark.search.css
+++ b/remark.search.css
@@ -29,6 +29,10 @@ div.search #search-next{
   display: none;
 }
 
-.current-match {
+span.match.current-match {
   background-color: cyan;
+}
+
+span.match {
+  background-color: yellow;
 }
